# F2F

./: .gitignore  API.md  Cargo.toml  README.md  package-lock.json  python-functions.yml  requirements.txt  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
example_data/: Farm to Fork Spreadsheet Week 40 - 02 10 2023.xlsx  Farm to Fork Spreadsheet Week 40 - 02_10_23.xlsx  Farm to Fork Spreadsheet Week 41 - 09 10 2023.xlsx  Farm to Fork Spreadsheet Week 41 - 09_10_2023.xlsx  Farm to Fork Spreadsheet Week 42 - 16_10_2023.xlsx  Farm to Fork Spreadsheet Week 43 - 23 10 23.xlsx  Farm to Fork Spreadsheet Week 43 - 23_10_2023.xlsx  Farm to Fork Spreadsheet Week 44 - 30_10_2023.xlsx  Farm to Fork Spreadsheet Week of 25_09_2023.xlsx  FarmToFork_GENERATOR_Contacts.xlsx  FarmToFork_Invoice_Contacts.xlsx  OxFarmToFork 07_09_2023.xlsx  OxFarmToFork Order Sheet week 20 - 14_05_2024.xlsx  OxFarmToFork Week 4.xlsx  OxFarmToFork order sheet week 19 - 07_05_2024.xlsx  OxFarmToFork order sheet week 21 - 21_05_2024.xlsx  OxFarmToFork order sheet week 22 - 28_05_2024.xlsx  OxFarmToFork spreadsheet TEST.xlsx  OxFarmToFork spreadsheet week 26 - 25_06_2024.xlsx  OxFarmToFork spreadsheet week 6 - 05_02_2024.xlsx  OxFarmToFork spreadsheet week 7 - 12_02_2024.xlsx  (+5 more)
lambdas/: .gitignore  Cargo.toml  README.md
lambdas/example_json/: invoices.json  orders.json
lambdas/src/: main.rs
lambdas/src/lib/: invoices.rs  lib.rs  orders.rs  pdf.rs  picks.rs  utils.rs
pdf/: Cargo.toml  README.md
pdf/example_json/: invoices.json  orders.json
pdf/src/: invoices.rs  lib.rs  main.rs  orders.rs  pdf.rs  utils.rs
pdf/src/lib/: invoices.rs  orders.rs  utils.rs
src/: main.rs
(+45 files in other folders)
