[workspace]

[package]
name = "f2f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
chrono = "0.4.33"
clap = { version = "4.0", features = ["derive"] }
lambda_runtime = "0.9.2"
printpdf = "0.7.0"
regex = "1.10.3"
termcolor = "1.4.1"
tokio = "1.36.0"
aws-config = { version= "1.1.6", features = ["behavior-version-latest"] }

#tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
serde_json = "1.0.114"
serde = "1.0.197"
aws-sdk-s3 = "1.16.0"

[lib]
name="f2f"
path="src/lib/lib.rs"

[[bin]]
name="create_orders"
path="src/bin/orders.rs"

[[bin]]
name="create_invoices"
path="src/bin/invoices.rs"

