[package]
name = "ftf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
chrono = "0.4.33"
clap = { version = "4.0", features = ["derive"] }
printpdf = "0.7.0"
regex = "1.10.3"
termcolor = "1.4.1"
